--- a/excred/patient-form.html
+++ b/excred/patient-form.html
@@ -9,7 +9,7 @@
 -->
  <html>
     <head>
-        <title>Hoan My's Extra Credit</title>
+        <title>Hoan My's Homework 4</title>
 
         <!-- Load external CSS styles -->
         <link href="./style.css" rel="stylesheet">
@@ -42,7 +42,6 @@
         <div id="body">
     <form name="newacct" id="newacct" action="./mis3371/thankyou-page.html">
         <p><i><mark>WARNING: This page will refresh in 2 hours. A reminder will be sent in 1 hour.</mark></i></p>
-
         <table class="form">
             <tr class="form">
                 <th class="form" align="left" colspan="3">Create an Account</th>
@@ -60,6 +59,7 @@
                         name="firstname" 
                         placeholder="Barack (req'd)"
                         required
+                        pattern="[A-Z^a-z-' ^~]{2,}"
                         onblur="checkfirstname()"
                         >
                 <label for="middleinit">Middle Initial:</label>
@@ -69,6 +69,8 @@
                         id="middleinit" 
                         name="middleinit" 
                         placeholder="H"
+                        pattern="[A-Z^a-z ]{0,}"
+                        onblur="checkmiddle()"
                         >
                 <label for="lastname">Last Name:</label>
                 <input type="text" 
@@ -77,7 +79,10 @@
                         id="lastname" 
                         name="lastname" 
                         placeholder="Obama (req'd)"
+                        pattern="[A-Z^a-z \-'^~]{2,}"
                         required
+                        oninput="checklastname()"
+                        onblur="checklastname()"
                         >
                 <td><span id="name_message"></span></td>
             </tr>
@@ -92,6 +97,7 @@
                         name="addr1" 
                         placeholder="# and Street Address (req'd)"
                         required
+                        onblur="checkaddr1()"
                         >
             </tr>
             <tr class="form">
@@ -154,11 +160,12 @@
                 <td align="left">
                 <label for="phone">Phone #:</label>
                 <input type="text" 
-                        size="13"
-                        maxlength="13"
+                        size="14"
+                        maxlength="14"
                         id="phone" 
                         name="phone" 
                         placeholder="(123) 456-7890"
+                        onkeydown="fixphone()""
                 <label for="sex"> Gender:</label>
                     <input type="radio" id="Male" name="sex" value="Male" required>
                     <label for="Male">Male</label>
@@ -177,6 +184,7 @@
                         id="email" 
                         name="email" 
                         placeholder="Enter a valid email address, such as one with @gmail.com"
+                        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,20}$"
                         >
             </tr>
             <tr class="form">
@@ -224,9 +232,10 @@
                         name="repassword" 
                         placeholder="******** (req'd)"
                         title="Must match the password you inputted above"
-                        onfocus="checkrepassword()"
-                        oninput="checkrepassword()"
-                        onblur="checkrepassword()"
+                        pattern="(?=.*[A-Z])(?=.*[a-z])(?=.*\d)(?=.*[!@#$%^&*()-_+=\/><.,`~]).{8,}"
+                    onfocus="checkpassword2()"
+                    oninput="checkpassword2()"
+                    onblur="checkpassword2()"
                         required
                         >
                 <span id="password2_text">
