--- a/excred/index.html
+++ b/excred/index.html
@@ -1,6 +1,6 @@
      <!DOCTYPE html>
 <!-- 
-    Program name: patient-form.html
+    Program name: index.html
     Author: Hoan My Le
     Date created: 2025-11-14
     Date last edited: 2025-12-10
