--- a/excred/index.html
+++ b/excred/index.html
@@ -9,7 +9,7 @@
 -->
  <html>
     <head>
-        <title>Hoan My's Homework 4</title>
+        <title>Hoan My's Extra Credit</title>
 
         <!-- Load external CSS styles -->
         <link href="./style.css" rel="stylesheet">
