--- a/excred/index.html
+++ b/excred/index.html
@@ -357,7 +357,7 @@
 <p id="outputformdata"></p>
 
 <!-- Load external JavaScript -->
-<script src=".script.js"></script>
+<script src="./script.js"></script>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script>
         <!-- This creates a LONG date message -->
