--- a/excred/index.html
+++ b/excred/index.html
@@ -42,7 +42,13 @@
         <div id="body">
     <form name="newacct" id="newacct" action="./mis3371/thankyou-page.html">
         <p><i><mark>WARNING: This page will refresh in 2 hours. A reminder will be sent in 1 hour.</mark></i></p>
-        <table class="form">
+
+     <audio controls autoplay>
+          <source src="peacefulpiano.mp3"
+               type="audio/mp3">
+     </audio>
+         
+         <table class="form">
             <tr class="form">
                 <th class="form" align="left" colspan="3">Create an Account</th>
                 </tr>
