--- a/excred/index.html
+++ b/excred/index.html
@@ -43,7 +43,7 @@
     <form name="newacct" id="newacct" action="./mis3371/thankyou-page.html">
         <p><i><mark>WARNING: This page will refresh in 2 hours. A reminder will be sent in 1 hour.</mark></i></p>
 
-     <audio controls autoplay>
+     <audio controls>
           <source src="peacefulpiano.mp3"
                type="audio/mp3">
      </audio>
