--- a/excred/index.html
+++ b/excred/index.html
@@ -43,7 +43,7 @@
     <form name="newacct" id="newacct" action="./mis3371/thankyou-page.html">
         <p><i><mark>WARNING: This page will refresh in 2 hours. A reminder will be sent in 1 hour.</mark></i></p>
 
-     <audio controls>
+     <audio controls autoplay>
           <source src="peacefulpiano.mp3"
                type="audio/mp3">
      </audio>
@@ -342,13 +342,6 @@
             <input type="button" id="review" value="Click Here to Review" onclick='review1()'>
             <input type="submit" id="submit" value="Click Here to Submit">
             </left>
-             
-<dialog id="reviewModal">
-  <h2>Form Review</h2>
-  <div id="outputformdata">
-    </div>
-  <button onclick="document.getElementById('reviewModal').close()">Close</button>
-</dialog>
              
 <!-- Setting up Google reCAPTCHA with localhost -->
 <div class="g-recaptcha" data-sitekey="6Le9JiksAAAAAK34_1jhxqtJq52Op0LfjfbcGBvc"></div>
