--- a/excred/index.html
+++ b/excred/index.html
@@ -41,6 +41,16 @@
 <iframe src="https://www.bauer.uh.edu/" style="width:100%"></iframe>
         <div id="body">
     <form name="newacct" id="newacct" action="./mis3371/thankyou-page.html">
+         
+        <div id="mySidebar" class="sidebar">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">x</a>
+            <a href="#">About</a>
+             <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a></div>
+<div id="main">
+    <button class="openbtn" onclick="openNav()">Click Here to Learn More</button>
+
         <p><i><mark>WARNING: This page will refresh in 2 hours. A reminder will be sent in 1 hour.</mark></i></p>
 
      <audio controls autoplay>
